# Jarvis

./: .gitignore  README.md  README.zh.md  main.py  pyproject.toml  requirements.txt  test.py  test_gpt51_tools.py  update_knowledge.py
agent/: agent.py  llm_client.py
agent/router/: level1_keywords.py  level3_llm.py
config/: mcp_servers.json  user_arxiv&notion.json  user_config.example.json  user_config.json  user_sql_test.json
data/: knowledge.db  sessions.db
jarvis_agent.egg-info/: PKG-INFO  SOURCES.txt
knowledge/: zju_enrollment.csv
logs/20251205T155648Z/: events.jsonl
logs/20251205T161141Z/: events.jsonl
logs/20251205T161531Z/: events.jsonl
logs/20251205T161734Z/: events.jsonl
logs/20251206T045743Z/: events.jsonl
logs/20251206T050515Z/: events.jsonl
logs/20251206T081743Z/: events.jsonl
logs/20251206T082159Z/: events.jsonl
logs/20251206T082447Z/: events.jsonl
logs/20251206T082714Z/: events.jsonl
logs/20251206T083835Z/: events.jsonl
logs/20251206T085143Z/: events.jsonl
logs/20251206T085445Z/: events.jsonl
logs/20251206T090621Z/: events.jsonl
logs/20251206T091017Z/: events.jsonl
logs/20251206T103217Z/: events.jsonl
mcp_core/: mcp_client.py
output/: ElwynSkiles.md  antonette.md  samantha.md  zjuanalysis.md
prompts/: router_dispatch_system.md
rag/: context.py  import_to_sqlite.py  loader.py  vector_store_faiss.py
src/: MCP_Client.py  __init__.py  agent.py  chat_openai.py  embedding_retriever.py  main.py  my_tools.py  utils.py
tests/: test_MCPClient.py  test_OllamaEmbed.py  test_chat_openai.py
utils/: session_store.py
(+16 files in other folders)
